# Lixet

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  VERSION  install.py  install.sh  main.py  manager.py  pyproject.toml  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
backup/: manager.py
cli/: parser.py
core/: detector.py  doctor_log.py  engine.py  install_transaction.py  layout.py  models.py  registry.py  uninstaller.py  updater.py  version.py
repair/: manager.py  snapshot.py  transaction.py
services/: __init__.py  dns_service.py  fail2ban_service.py  fstab_service.py  networking_service.py  nginx_service.py  ssh_service.py  sudoers_service.py  sysctl_service.py  systemd_service.py  text_service.py  ufw_service.py
tests/: helpers.py  test_baseline_regressions.py  test_cli_engine.py  test_installer_updater.py  test_phase1_foundations.py  test_phase2_features.py  test_reliability_overhaul.py  test_repair_safety.py  test_runtime_contracts.py  test_services.py  test_validators_focused.py
utils/: command.py  diff.py  selection.py  ui.py
validators/: dns_validator.py  fail2ban_validator.py  fstab_validator.py  helpers.py  networking_validator.py  nginx_validator.py  ssh_validator.py  sudoers_validator.py  sysctl_validator.py  systemd_validator.py  ufw_validator.py
